# kpi-122

./: .gitattributes  .gitignore  LICENSE.md  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: renovate.json
.github/workflows/: codeql.yml  devcontainer.yml  oci.yml
q1_bases/exam01/: README.md  pyproject.toml
q1_bases/exam01/src/: task1.py  task2.py
q1_bases/extra01/: README.md  pyproject.toml
q1_bases/extra01/src/: task1.py  task2.py  task3.py  task4.py
q1_bases/module01/: README.md  module1.pyproject  pyproject.toml
q1_bases/module01/src/: __main__.py  auth.py  home.py  main.py
q1_bases/p02/: README.md  pyproject.toml
q1_bases/p02/src/: task1.py  task2.py
q1_bases/p03/: README.md  pyproject.toml
q1_bases/p03/src/: task1.py  task2.py
q1_bases/p04/: README.md  pyproject.toml
q1_bases/p04/src/: task1.py  task2.py
q1_bases/p05/: README.md  pyproject.toml
q1_bases/p05/src/: task1.py  task2.py
q1_bases/p06/: README.md  pyproject.toml
q1_bases/p06/src/: task1.py  task2.py
q1_bases/p07/: README.md  pyproject.toml
q1_bases/p07/src/: task1.py  task2.py
q1_bases/p08/: README.md  pyproject.toml
q1_bases/p08/src/: task1.py
q1_bases/p09/: README.md  pyproject.toml
q1_bases/p09/assets/: db.json
q1_bases/p09/src/: task1.py  task2.py
q1_bases/p10/: README.md  pyproject.toml
q1_bases/p10/src/: task1.py  task2.py
q1_bases/p11/: README.md  pyproject.toml
q1_bases/p11/assets/: task1.json  task2_input.txt  task2_output.txt
q1_bases/p11/src/: task1.py  task2.py
q2_algorithms/p03/: CMakeLists.txt  README.md
q2_algorithms/p03/src/: task1.cpp
q2_algorithms/p05/: CMakeLists.txt  README.md
q2_algorithms/p05/src/: task1.cpp  task2.cpp
q2_algorithms/p06/: CMakeLists.txt  README.md
q2_algorithms/p06/src/: task1.cpp  task2.cpp
q2_algorithms/p07/: CMakeLists.txt  CMakePresets.json  README.md  cpplint.cfg
q2_algorithms/p07/src/: task1.cpp  task2.cpp
q2_algorithms/p08/: CMakeLists.txt  README.md
q2_algorithms/p08/src/: task1.cpp  task2.cpp
q2_algorithms/p09/: .clang-format  CMakeLists.txt  README.md
q2_algorithms/p09/src/: task1.cpp  task2.cpp
q2_algorithms/p10/: CMakeLists.txt  README.md
q2_algorithms/p10/src/: task1.cpp  task2.cpp
q2_algorithms/p11/: CMakeLists.txt  README.md
q2_algorithms/p11/src/: task1.cpp  task2.cpp
q2_algorithms/p12/: CMakeLists.txt  README.md
q2_algorithms/p12/src/: task1.cpp  task2.cpp
q2_fuzzy/extra01/: README.md  pyproject.toml  setup.cfg
q2_fuzzy/extra01/src/: impl.py  task.py  task1.py  task1_real.py  tmp.py
q2_fuzzy/oop01/: README.md  pyproject.toml  setup.cfg
q2_fuzzy/p01/: README.md  pyproject.toml
q2_fuzzy/p02/: README.md  pyproject.toml
q2_fuzzy/p03/: README.md  pyproject.toml
q2_fuzzy/p04/: README.md  pyproject.toml
q2_fuzzy/p05/: README.md  pyproject.toml
q2_fuzzy/p06/: README.md  pyproject.toml
q2_fuzzy/p07/: README.md  pyproject.toml
q2_fuzzy/p07/src/: tmp.py  (+2 more)
q2_fuzzy/p08/: README.md  pyproject.toml
q2_structures/extra01/: README.md  pyproject.toml
q2_structures/extra02/: README.md  pyproject.toml
q2_structures/extra03/: README.md  pyproject.toml  setup.cfg
q2_structures/p01/: README.md  pyproject.toml
q2_structures/p02/: README.md  pyproject.toml
q2_structures/p03/: README.md  pyproject.toml
q2_structures/p04/: README.md  pyproject.toml
q2_structures/p05/: README.md  pyproject.toml
q2_structures/p06/: README.md  pyproject.toml
q2_structures/p07/: README.md  pyproject.toml
q2_structures/p08/: README.md  pyproject.toml
q2_structures/p09/: .gitignore  README.md  pyproject.toml
q2_structures/p10/: README.md  pyproject.toml
q3_algorithms/course/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  cpplint.cfg
q3_algorithms/course/test/: CMakeLists.txt
q3_algorithms/p02/: CMakeLists.txt  README.md
q3_algorithms/p03/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
q3_algorithms/p04/: CMakeLists.txt  CMakePresets.json  README.md
q3_algorithms/p05/: .clang-tidy  CMakeLists.txt  README.md
q3_algorithms/p06/: CMakeLists.txt  README.md
q3_algorithms/p07/: CMakeLists.txt  README.md
q3_algorithms/p08/: CMakeLists.txt  README.md
q3_algorithms/p09/: CMakeLists.txt  README.md
q3_algorithms/p10/: CMakeLists.txt  README.md
q3_algorithms/p11/: CMakeLists.txt  README.md
q3_algorithms/p12/: CMakeLists.txt  README.md
q3_alternatives/module01/: README.md  pyproject.toml
q3_alternatives/p01/: README.md  pyproject.toml
q3_alternatives/p02/: README.md  pyproject.toml
q3_alternatives/p02/src/: task1.py
q3_alternatives/p03/: README.md  pyproject.toml
q3_alternatives/p04/: README.md  pyproject.toml
q3_alternatives/p05/: README.md  pyproject.toml
q3_alternatives/p06/: README.md  pyproject.toml
q3_alternatives/p07/: README.md  pyproject.toml
q3_methods/module01/: .gitignore  README.md  pyproject.toml
q3_methods/module02/: README.md  pyproject.toml
q3_methods/p01/: .gitignore  README.md  pyproject.toml
q3_methods/p02/: README.md  pyproject.toml
q3_methods/p03/: README.md  pyproject.toml
q3_methods/p04/: README.md  pyproject.toml
q3_methods/p05/: README.md  pyproject.toml
q3_methods/p06/: README.md  pyproject.toml
q3_signals/lab01/: .gitignore  README.md  pyproject.toml
q3_signals/lab02/: README.md  pyproject.toml
q3_signals/lab03/: README.md  pyproject.toml
q3_signals/lab04/: pyproject.toml
q3_signals/lab05/: README.md  pyproject.toml
q3_signals/p01/: README.md  pyproject.toml
q3_signals/p02/: README.md  pyproject.toml
q3_signals/p03/: README.md  pyproject.toml
q3_signals/p04/: README.md  pyproject.toml
q3_signals/p05/: README.md  pyproject.toml
q3_systems/module01/: README.md
q3_systems/p11/: README.md
q4_oop/course/: CMakeLists.txt  README.md
q4_oop/p01/: .clang-tidy  .editorconfig  CMakeLists.txt  README.md  cpplint.cfg
q4_oop/p02/: .gitattributes  README.md
q4_oop/p02/test/: CMakeLists.txt  vector.cpp
q4_oop/p03/: .clang-tidy  CMakeLists.txt  README.md
q4_oop/p04/: README.md
(+477 files in other folders)
